2001-11-07  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-vinelinux.el: Changed the coding system of this file
	to iso-2022-7bit.

	* w3m-xmas.el (format-buffers-tab-line): Protect aginst errors
	caused by the illegal type of `w3m-current-url'.

	* w3m-e21.el (top): Define `w3m-current-url' and
	`w3m-current-title' to avoid byte-compile warnings.
	(w3m-insert-header-line): Protect aginst errors caused by the
	illegal type of `w3m-current-url'.
	(w3m-tab-line): Protect aginst errors caused by illegal types of
	`w3m-current-url' and `w3m-current-title'.

2001-11-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-xmas.el (format-buffers-tab-line): Don't use the value of
	`w3m-current-title' if it is nil.

2001-11-07  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-exec-filter): Modify regexp pattern of "Wrong
	username or passwd".

2001-11-06  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* shimbun/sb-digiko.el: New file.

2001-11-06  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (emacs-w3m-version): Modified.
	(top): Protect against the error occurs when `w3m-ucs.el' isn't
	found.

2001-11-06  Yuuichi Teranishi  <teranisi@gohome.org>

	* shimbun/sb-yomiuri-html.el: New file.

2001-11-06  Hideyuki SHIRAI  <shirai@meadowy.org>

	* shimbun/mew-shimbun.el (mew-shimbun-md5): Remove `X-Face:'
	header before md5 calculation.

2001-11-06  Yuuichi Teranishi  <teranisi@gohome.org>

	* shimbun/sb-asahi.el (shimbun-get-headers): Skip top article.

2001-11-06  Hideyuki SHIRAI  <shirai@meadowy.org>

	* shimbun/mew-shimbun.el (mew-shimbun-groups): Remove user option.
	(mew-shimbun-folder-groups): New user option.
	(mew-shimbun-element-body): New macro.
	(mew-shimbun-retrieve): Use `mew-shimbun-folder-groups' instead of
	`mew-shimbun-groups'. Use `mew-shimbun-element-body' macro.
	(mew-shimbun-retrieve-all): Ditto.
	(mew-shimbun-re-retrieve): Ditto.
	(mew-shimbun-re-retrieve-all): Ditto.
	(mew-shimbun-retrieve-article): Change mandatory option.