@@ -1,3 +1,8 @@
+2001-11-08  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m.el (w3m-current-title, w3m-current-url): Define them before
+	loading the version specific modules.
+
 2001-11-07  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
 
 	* shimbun/sb-vinelinux.el: Changed the coding system of this file
